<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp">


            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/ic_logo_small"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_menu_24"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo"
                app:tint="@color/white" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <LinearLayout
                android:id="@+id/homecon"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp"
                android:visibility="visible">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_game"
                    android:padding="@dimen/_12sdp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/orange_dark"
                    app:cornerRadius="@dimen/_8sdp"
                    app:strokeColor="@color/orange_dark"
                    android:id="@+id/newGame"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />


                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continuee"
                    android:id="@+id/contin"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:padding="@dimen/_12sdp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/orange_dark"
                    app:cornerRadius="@dimen/_8sdp"
                    app:strokeColor="@color/orange_dark"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exitBTN"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/exitGame"
                    android:textColor="@color/orange_dark"
                    app:cornerRadius="@dimen/_8sdp"
                    app:strokeColor="@color/orange_dark" />

            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/whatsappfab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/_15sdp"
                android:foregroundGravity="center"
                android:tint="@color/white"
                app:backgroundTint="@color/green"
                app:fabCustomSize="45dp"
                app:srcCompat="@drawable/ic_whatsapp"
                app:tint="@color/white" />


        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>