<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp">


            <TextView
                android:id="@+id/profileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_menu_24"
                app:layout_constraintBottom_toBottomOf="@+id/profileLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profileLabel"
                app:tint="@color/white" />


        </androidx.constraintlayout.widget.ConstraintLayout>





        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/top"
            android:layout_height="wrap_content">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addimgcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">




            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/allcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/addimgcon">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/personalname"
                    android:textColor="@color/white" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullname"
                    android:layout_marginTop="@dimen/_4sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxStrokeColor="@color/white"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>





                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="start"
                    android:text="@string/teamName"
                    android:textColor="@color/white" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/teamName"
                    android:layout_marginTop="@dimen/_4sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                    app:boxCornerRadiusTopStart="@dimen/_8sdp"
                    app:hintEnabled="false"
                    app:boxStrokeColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/forgotPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/saveBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:backgroundTint="@color/orange_dark"
                    android:elevation="0dp"
                    android:textStyle="bold"
                    android:padding="@dimen/_8sdp"
                    android:stateListAnimator="@null"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:cornerRadius="@dimen/_8sdp"
                    app:layout_constraintBottom_toTopOf="@+id/linear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />




            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>